@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,7 +28,7 @@ package com.sun.marlin;
 import com.sun.prism.impl.shape.MaskData;
 import java.nio.ByteBuffer;
 import java.util.Arrays;
-import jdk.internal.misc.Unsafe;
+import sun.misc.Unsafe;
 
 public final class MaskMarlinAlphaConsumer implements MarlinAlphaConsumer {
     int x, y, width, height;
